Upgraded project to java 21 and spring boot 3.2